force-app/main/default/objects/cve__PaymentSpecification__c/cve__PaymentSpecification__c.object-meta.xml
<CustomObject>
    <customHelpPage>cve__PaymentSpecificationHelp</customHelpPage>
    <label>Payment Specification</label>
    <nameField>
        <displayFormat>PS-{YYYY}-{000000}</displayFormat>
        <label>Payment Specification Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Payment Specifications</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>