force-app/main/default/objects/cve__PaymentSpecification__c/fields/Benefit_Code__c.field-meta.xml
<CustomField>
    <fullName>Benefit_Code__c</fullName>
    <description>Used for PDD and this field will be copied down from the BC</description>
    <label>Benefit Code</label>
    <length>15</length>
    <type>Text</type>
</CustomField>