force-app/main/default/objects/cve__PaymentSpecification__c/fields/cve__AmountPeriod__c.field-meta.xml
<CustomField>
    <fullName>cve__AmountPeriod__c</fullName>
    <inlineHelpText>The period that the amounts relate to</inlineHelpText>
    <label>Amount Period</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Daily</fullName>
            </value>
            <value>
                <fullName>Weekly</fullName>
            </value>
            <value>
                <fullName>Bi-Weekly</fullName>
            </value>
            <value>
                <fullName>Semi-Monthly</fullName>
            </value>
            <value>
                <fullName>Monthly</fullName>
            </value>
            <value>
                <fullName>Quarterly</fullName>
            </value>
            <value>
                <fullName>Half-Yearly</fullName>
            </value>
            <value>
                <fullName>Yearly</fullName>
            </value>
            <value>
                <fullName>Lump Sum</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>