force-app/main/default/objects/cve__PaymentSpecification__c/fields/cve__ChangeToOverpaymentBeforeTax__c.field-meta.xml
<CustomField>
    <fullName>cve__ChangeToOverpaymentBeforeTax__c</fullName>
    <inlineHelpText>Amount incremented to the &quot;Overpayment Before Tax&quot;</inlineHelpText>
    <label>Change To Overpayment Before Tax</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>