force-app/main/default/objects/cve__PaymentSpecification__c/fields/cve__ChangeToOverpaymentNet__c.field-meta.xml
<CustomField>
    <fullName>cve__ChangeToOverpaymentNet__c</fullName>
    <inlineHelpText>Amount incremented to the &quot;Overpayment Net&quot;</inlineHelpText>
    <label>Change To Overpayment Net</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>