force-app/main/default/objects/cve__PaymentSpecification__c/fields/cve__Claim__c.field-meta.xml
<CustomField>
    <fullName>cve__Claim__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Claim</label>
    <referenceTo>cve__Claim__c</referenceTo>
    <relationshipLabel>Payment Specifications</relationshipLabel>
    <relationshipName>PaymentSpecifications</relationshipName>
    <type>Lookup</type>
</CustomField>