force-app/main/default/objects/cve__PaymentSpecification__c/fields/cve__ClaimantDOB__c.field-meta.xml
<CustomField>
    <fullName>cve__ClaimantDOB__c</fullName>
    <formula>cve__Claim__r.cve__ClaimantInsured__r.Birthdate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Claimant/Insured Birthdate</label>
    <type>Date</type>
</CustomField>