force-app/main/default/objects/cve__PaymentSpecification__c/fields/cve__ClaimantName__c.field-meta.xml
<CustomField>
    <fullName>cve__ClaimantName__c</fullName>
    <formula>cve__Claim__r.cve__ClaimantInsured__r.cve__FirstNameCopy__c + &apos; &apos; + cve__Claim__r.cve__ClaimantInsured__r.cve__LastNameCopy__c</formula>
    <label>Claimant/Insured</label>
    <type>Text</type>
</CustomField>