force-app/main/default/objects/cve__PaymentSpecification__c/fields/cve__DefaultPaymentsForAllBeneficiaries__c.field-meta.xml
<CustomField>
    <fullName>cve__DefaultPaymentsForAllBeneficiaries__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Default Payments for all Beneficiaries</label>
    <type>Checkbox</type>
</CustomField>