force-app/main/default/objects/cve__PaymentSpecification__c/fields/cve__DisabledAutomatedAdjustmentTypes__c.field-meta.xml
<CustomField>
    <fullName>cve__DisabledAutomatedAdjustmentTypes__c</fullName>
    <inlineHelpText>These Adjustment types are not updated by automation allowing manually edited Adjustments to be used instead; edit on the Payment Specification</inlineHelpText>
    <label>Disabled Automated Adjustments</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Age at Date of Disability (Pre-Tax)</fullName>
            </value>
            <value>
                <fullName>Air Bag Benefit</fullName>
            </value>
            <value>
                <fullName>Annuity P... Interest - Simple (Pre-Tax)</fullName>
            </value>
            <value>
                <fullName>Cause of Claim (Pre-Tax)</fullName>
            </value>
            <value>
                <fullName>Death Claim Interest (Pre-Tax)</fullName>
            </value>
            <value>
                <fullName>Dividend - Accumulated (Pre-Tax)</fullName>
            </value>
            <value>
                <fullName>Dividend - Paid Up (Pre-Tax)</fullName>
            </value>
            <value>
                <fullName>Dividends (Pre-Tax)</fullName>
            </value>
            <value>
                <fullName>Dividend - Term (Pre-Tax)</fullName>
            </value>
            <value>
                <fullName>Federal Income Tax</fullName>
            </value>
            <value>
                <fullName>FICA Tax</fullName>
            </value>
            <value>
                <fullName>Length of Servic... Disability (Pre-Tax)</fullName>
            </value>
            <value>
                <fullName>Life Proc... Interest - Simple (Pre-Tax)</fullName>
            </value>
            <value>
                <fullName>Loan (Pre-Tax)</fullName>
            </value>
            <value>
                <fullName>Maximum Benefit Adjustment (Pre-Tax)</fullName>
            </value>
            <value>
                <fullName>Medicare Tax</fullName>
            </value>
            <value>
                <fullName>Minimum Benefit Adjustment (Pre-Tax)</fullName>
            </value>
            <value>
                <fullName>Premium Refund (Pre-Tax)</fullName>
            </value>
            <value>
                <fullName>Return to Work Earnings (Pre-Tax)</fullName>
            </value>
            <value>
                <fullName>Seat Belt Benefit</fullName>
            </value>
            <value>
                <fullName>State Income Tax</fullName>
            </value>
            <value>
                <fullName>Statutory Disability Benefit</fullName>
            </value>
            <value>
                <fullName>Temporary Recovery (Pre-Tax)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>