force-app/main/default/objects/cve__PaymentSpecification__c/fields/cve__ExpenseType__c.field-meta.xml
<CustomField>
    <fullName>cve__ExpenseType__c</fullName>
    <label>Expense Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Autopsy</fullName>
            </value>
            <value>
                <fullName>Death Certificate</fullName>
            </value>
            <value>
                <fullName>Functional Capacity Evaluation</fullName>
            </value>
            <value>
                <fullName>Independent Medical Examination</fullName>
            </value>
            <value>
                <fullName>Labor Market Survey</fullName>
            </value>
            <value>
                <fullName>Medical Records</fullName>
            </value>
            <value>
                <fullName>Police Reports</fullName>
            </value>
            <value>
                <fullName>Special Investigation Charges</fullName>
            </value>
            <value>
                <fullName>Toxicology Report</fullName>
            </value>
            <value>
                <fullName>Transportation Charges</fullName>
            </value>
            <value>
                <fullName>Vendors</fullName>
            </value>
            <value>
                <fullName>Vocational Rehabilitation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>