force-app/main/default/objects/cve__PaymentSpecification__c/fields/cve__Explanation__c.field-meta.xml
<CustomField>
    <fullName>cve__Explanation__c</fullName>
    <label>Explanation</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>