force-app/main/default/objects/cve__PaymentSpecification__c/fields/cve__IncurredBeforeTax__c.field-meta.xml
<CustomField>
    <fullName>cve__IncurredBeforeTax__c</fullName>
    <label>Incurred Before Tax</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>