force-app/main/default/objects/cve__PaymentSpecification__c/fields/cve__Indicator__c.field-meta.xml
<CustomField>
    <fullName>cve__Indicator__c</fullName>
    <label>Indicator</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Internal</fullName>
                <default>true</default>
                <label>Internal</label>
            </value>
            <value>
                <fullName>External</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>