force-app/main/default/objects/cve__PaymentSpecification__c/fields/cve__InvoiceDate__c.field-meta.xml
<CustomField>
    <fullName>cve__InvoiceDate__c</fullName>
    <label>Invoice Date</label>
    <type>Date</type>
</CustomField>