force-app/main/default/objects/cve__PaymentSpecification__c/fields/cve__InvoiceNumber__c.field-meta.xml
<CustomField>
    <fullName>cve__InvoiceNumber__c</fullName>
    <label>Invoice Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>