force-app/main/default/objects/cve__PaymentSpecification__c/fields/cve__LiabilityBeforeTax__c.field-meta.xml
<CustomField>
    <fullName>cve__LiabilityBeforeTax__c</fullName>
    <label>Liability Before Tax</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>