force-app/main/default/objects/cve__PaymentSpecification__c/fields/cve__LiabilityCalculationExplanation__c.field-meta.xml
<CustomField>
    <fullName>cve__LiabilityCalculationExplanation__c</fullName>
    <label>Liability Calculation Explanation</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>