force-app/main/default/objects/cve__PaymentSpecification__c/fields/cve__LiabilityLastCalculated__c.field-meta.xml
<CustomField>
    <fullName>cve__LiabilityLastCalculated__c</fullName>
    <label>Liability Last Calculated</label>
    <type>DateTime</type>
</CustomField>