force-app/main/default/objects/cve__PaymentSpecification__c/fields/cve__LiabilityThrough__c.field-meta.xml
<CustomField>
    <fullName>cve__LiabilityThrough__c</fullName>
    <label>Liability Through</label>
    <type>Date</type>
</CustomField>