force-app/main/default/objects/cve__PaymentSpecification__c/fields/cve__MaximumAmount__c.field-meta.xml
<CustomField>
    <fullName>cve__MaximumAmount__c</fullName>
    <label>Maximum Amount</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>