force-app/main/default/objects/cve__PaymentSpecification__c/fields/cve__MinimumAmount__c.field-meta.xml
<CustomField>
    <fullName>cve__MinimumAmount__c</fullName>
    <label>Minimum Amount</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>