force-app/main/default/objects/cve__PaymentSpecification__c/fields/cve__Note__c.field-meta.xml
<CustomField>
    <fullName>cve__Note__c</fullName>
    <label>Note</label>
    <length>255</length>
    <type>Text</type>
</CustomField>