force-app/main/default/objects/cve__PaymentSpecification__c/fields/cve__NumberOfPaymentPeriods__c.field-meta.xml
<CustomField>
    <fullName>cve__NumberOfPaymentPeriods__c</fullName>
    <inlineHelpText>Calculated (possible fractional) number of payment periods between the Start and Through dates</inlineHelpText>
    <label>Number of Payment Periods</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>