force-app/main/default/objects/cve__PaymentSpecification__c/fields/cve__NumberOfPayments__c.field-meta.xml
<CustomField>
    <fullName>cve__NumberOfPayments__c</fullName>
    <inlineHelpText>Clear the Through date field and enter a whole number here to have the Through date calculated to be this whole number of payment periods after Start date</inlineHelpText>
    <label>Number of Payments</label>
    <precision>12</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>