force-app/main/default/objects/cve__PaymentSpecification__c/fields/cve__OverpaymentLastCalculated__c.field-meta.xml
<CustomField>
    <fullName>cve__OverpaymentLastCalculated__c</fullName>
    <label>Overpayment Last Calculated</label>
    <type>DateTime</type>
</CustomField>