force-app/main/default/objects/cve__PaymentSpecification__c/fields/cve__PaidDays__c.field-meta.xml
<CustomField>
    <fullName>cve__PaidDays__c</fullName>
    <label>Paid Days</label>
    <summarizedField>cve__Payment__c.cve__Days__c</summarizedField>
    <summaryFilterItems>
        <field>cve__Payment__c.cve__Paid__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>cve__Payment__c.cve__PaymentSpecification__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>