force-app/main/default/objects/cve__PaymentSpecification__c/fields/cve__PaymentCalculationDate__c.field-meta.xml
<CustomField>
    <fullName>cve__PaymentCalculationDate__c</fullName>
    <description>This field gets set by the PaymentCalculator and is used in conjunction with History Tracking to supply an audit history of the amount of times the Payment Calculation was used.</description>
    <inlineHelpText>The date and time that the Payment Calculation was last run.</inlineHelpText>
    <label>Payment Calculation Date</label>
    <type>DateTime</type>
</CustomField>