force-app/main/default/objects/cve__PaymentSpecification__c/fields/cve__PaymentCalculationExplanation__c.field-meta.xml
<CustomField>
    <fullName>cve__PaymentCalculationExplanation__c</fullName>
    <label>Payment Calculation Explanation</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>