force-app/main/default/objects/cve__PaymentSpecification__c/fields/cve__PaymentOption__c.field-meta.xml
<CustomField>
    <fullName>cve__PaymentOption__c</fullName>
    <label>Payment Option</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Accelerated Payment</fullName>
            </value>
            <value>
                <fullName>Lump Sum Payment</fullName>
            </value>
            <value>
                <fullName>Retained Asset Payment</fullName>
            </value>
            <value>
                <fullName>Settlement - Interest Only</fullName>
            </value>
            <value>
                <fullName>Settlement - Fixed Installment Period</fullName>
            </value>
            <value>
                <fullName>Settlement - Fixed Installment Amount</fullName>
            </value>
            <value>
                <fullName>Settlement - Life Income</fullName>
            </value>
            <value>
                <fullName>Settlement - Life Income with Period Certain</fullName>
            </value>
            <value>
                <fullName>Settlement - Life Income with Refund</fullName>
            </value>
            <value>
                <fullName>Settlement - Joint and Survivor Income</fullName>
            </value>
            <value>
                <fullName>Retained Assets</fullName>
            </value>
            <value>
                <fullName>Installments for a Guaranteed Period</fullName>
            </value>
            <value>
                <fullName>Installments for Life</fullName>
            </value>
            <value>
                <fullName>Installments for Life with a Guaranteed Period</fullName>
            </value>
            <value>
                <fullName>Benefit Deposited with Interest</fullName>
            </value>
            <value>
                <fullName>Installments of a Selected Amount</fullName>
            </value>
            <value>
                <fullName>Joint and Survivor Annuity</fullName>
            </value>
            <value>
                <fullName>Joint and 2/3 Survivor Annuity</fullName>
            </value>
            <value>
                <fullName>No Payment</fullName>
            </value>
            <value>
                <fullName>To be Determined</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>