force-app/main/default/objects/cve__PaymentSpecification__c/fields/cve__PaymentSchedule__c.field-meta.xml
<CustomField>
    <fullName>cve__PaymentSchedule__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Payment Schedule</label>
    <referenceTo>cve__PaymentSchedule__c</referenceTo>
    <relationshipLabel>Payment Specifications</relationshipLabel>
    <relationshipName>PaymentSpecifications</relationshipName>
    <type>Lookup</type>
</CustomField>