force-app/main/default/objects/cve__PaymentSpecification__c/fields/cve__PaymentType__c.field-meta.xml
<CustomField>
    <fullName>cve__PaymentType__c</fullName>
    <label>Payment Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Benefit</fullName>
            </value>
            <value>
                <fullName>Expense</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>