force-app/main/default/objects/cve__PaymentSpecification__c/fields/cve__Period__c.field-meta.xml
<CustomField>
    <fullName>cve__Period__c</fullName>
    <inlineHelpText>How often the payments are made</inlineHelpText>
    <label>Period</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Weekly</fullName>
            </value>
            <value>
                <fullName>Bi-Weekly</fullName>
            </value>
            <value>
                <fullName>Semi-Monthly</fullName>
            </value>
            <value>
                <fullName>Monthly</fullName>
            </value>
            <value>
                <fullName>Quarterly</fullName>
            </value>
            <value>
                <fullName>Half-Yearly</fullName>
            </value>
            <value>
                <fullName>Yearly</fullName>
            </value>
            <value>
                <fullName>Lump Sum</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>