force-app/main/default/objects/cve__PaymentSpecification__c/fields/cve__PeriodDailyAmount__c.field-meta.xml
<CustomField>
    <fullName>cve__PeriodDailyAmount__c</fullName>
    <label>Period Daily Amount</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>