force-app/main/default/objects/cve__PaymentSpecification__c/fields/cve__PeriodMinutesEachDay__c.field-meta.xml
<CustomField>
    <fullName>cve__PeriodMinutesEachDay__c</fullName>
    <label>Period Minutes Each Day JSON</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>