force-app/main/default/objects/cve__PaymentSpecification__c/fields/cve__PeriodMinutesEachDayScheduled__c.field-meta.xml
<CustomField>
    <fullName>cve__PeriodMinutesEachDayScheduled__c</fullName>
    <label>Period Minutes Each Day Scheduled JSON</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>