force-app/main/default/objects/cve__PaymentSpecification__c/fields/cve__PeriodMinutesEachDayScheduledStart__c.field-meta.xml
<CustomField>
    <fullName>cve__PeriodMinutesEachDayScheduledStart__c</fullName>
    <label>Period Minutes Each Day Scheduled Start</label>
    <type>Date</type>
</CustomField>