force-app/main/default/objects/cve__PaymentSpecification__c/fields/cve__PeriodMinutesEachDayStart__c.field-meta.xml
<CustomField>
    <fullName>cve__PeriodMinutesEachDayStart__c</fullName>
    <label>Period Minutes Each Day Start</label>
    <type>Date</type>
</CustomField>