force-app/main/default/objects/cve__PaymentSpecification__c/fields/cve__PeriodMinutesInMonth__c.field-meta.xml
<CustomField>
    <fullName>cve__PeriodMinutesInMonth__c</fullName>
    <label>Period Minutes In Month</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>