force-app/main/default/objects/cve__PaymentSpecification__c/fields/cve__PolicyId__c.field-meta.xml
<CustomField>
    <fullName>cve__PolicyId__c</fullName>
    <formula>IF($Setup.cve__Switches__c.cve__ClaimLevelPaymentSpecification__c,
  cve__Claim__r.cve__Policy__c,
  IF($Setup.cve__ClaimIntakeOptions__c.cve__AllowMultiplePolicySelection__c,
    cve__BenefitClaimed__r.cve__Policy__c,
    cve__Claim__r.cve__Policy__c
  )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Policy Id</label>
    <type>Text</type>
</CustomField>