force-app/main/default/objects/cve__PaymentSpecification__c/fields/cve__RecordTypeName__c.field-meta.xml
<CustomField>
    <fullName>cve__RecordTypeName__c</fullName>
    <description>Filled in using a trigger. Allows formulas to access the record type name of related objects.</description>
    <label>Record Type Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>