force-app/main/default/objects/cve__PaymentSpecification__c/fields/cve__ServiceStart__c.field-meta.xml
<CustomField>
    <fullName>cve__ServiceStart__c</fullName>
    <label>Service Start</label>
    <type>Date</type>
</CustomField>