force-app/main/default/objects/cve__PaymentSpecification__c/fields/cve__ServiceThrough__c.field-meta.xml
<CustomField>
    <fullName>cve__ServiceThrough__c</fullName>
    <label>Service Through</label>
    <type>Date</type>
</CustomField>