force-app/main/default/objects/cve__PaymentSpecification__c/fields/cve__Start__c.field-meta.xml
<CustomField>
    <fullName>cve__Start__c</fullName>
    <label>Start</label>
    <type>Date</type>
</CustomField>