force-app/main/default/objects/cve__PaymentSpecification__c/fields/cve__SubmittedAmount__c.field-meta.xml
<CustomField>
    <fullName>cve__SubmittedAmount__c</fullName>
    <label>Submitted Amount</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>