force-app/main/default/objects/cve__PaymentSpecification__c/fields/cve__Through__c.field-meta.xml
<CustomField>
    <fullName>cve__Through__c</fullName>
    <label>Through</label>
    <type>Date</type>
</CustomField>