force-app/main/default/objects/cve__PaymentSpecification__c/fields/cve__WithholdFederalIncomeTax__c.field-meta.xml
<CustomField>
    <fullName>cve__WithholdFederalIncomeTax__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Withhold Federal Income Tax</label>
    <type>Checkbox</type>
</CustomField>