force-app/main/default/objects/cve__PaymentSpecification__c/fields/cve__WithholdStateIncomeTax__c.field-meta.xml
<CustomField>
    <fullName>cve__WithholdStateIncomeTax__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Withhold State Income Tax</label>
    <type>Checkbox</type>
</CustomField>