force-app/main/default/objects/cve__PaymentSpecification__c/recordTypes/cve__Accident.recordType-meta.xml
<RecordType>
    <fullName>cve__Accident</fullName>
    <active>true</active>
    <label>Accident</label>
</RecordType>