force-app/main/default/objects/cve__PaymentSpecification__c/recordTypes/cve__AccidentalDeathAndDismemberment.recordType-meta.xml
<RecordType>
    <fullName>cve__AccidentalDeathAndDismemberment</fullName>
    <active>true</active>
    <label>Accidental Death and Dismemberment</label>
</RecordType>