force-app/main/default/objects/cve__PaymentSpecification__c/recordTypes/cve__Annuity.recordType-meta.xml
<RecordType>
    <fullName>cve__Annuity</fullName>
    <active>true</active>
    <label>Annuity</label>
</RecordType>