force-app/main/default/objects/cve__PaymentSpecification__c/recordTypes/cve__Cancer.recordType-meta.xml
<RecordType>
    <fullName>cve__Cancer</fullName>
    <active>true</active>
    <label>Cancer</label>
</RecordType>