force-app/main/default/objects/cve__PaymentSpecification__c/recordTypes/cve__CriticalIllness.recordType-meta.xml
<RecordType>
    <fullName>cve__CriticalIllness</fullName>
    <active>true</active>
    <label>Critical Illness</label>
</RecordType>