force-app/main/default/objects/cve__PaymentSpecification__c/recordTypes/cve__Generic.recordType-meta.xml
<RecordType>
    <fullName>cve__Generic</fullName>
    <active>true</active>
    <label>Generic</label>
</RecordType>