force-app/main/default/objects/cve__PaymentSpecification__c/recordTypes/cve__HospitalIndemnity.recordType-meta.xml
<RecordType>
    <fullName>cve__HospitalIndemnity</fullName>
    <active>true</active>
    <label>Hospital Indemnity</label>
</RecordType>