force-app/main/default/objects/cve__PaymentSpecification__c/recordTypes/cve__IncomeProtection.recordType-meta.xml
<RecordType>
    <fullName>cve__IncomeProtection</fullName>
    <active>true</active>
    <label>Income Protection</label>
</RecordType>