force-app/main/default/objects/cve__PaymentSpecification__c/recordTypes/cve__Indemnity.recordType-meta.xml
<RecordType>
    <fullName>cve__Indemnity</fullName>
    <active>true</active>
    <description>Provides a Lump sum payment to the insured for a hospital stay.</description>
    <label>Indemnity</label>
</RecordType>