force-app/main/default/objects/cve__PaymentSpecification__c/recordTypes/cve__LongTermCare.recordType-meta.xml
<RecordType>
    <fullName>cve__LongTermCare</fullName>
    <active>true</active>
    <label>Long Term Care</label>
</RecordType>