force-app/main/default/objects/cve__PaymentSpecification__c/recordTypes/cve__LongTermDisability.recordType-meta.xml
<RecordType>
    <fullName>cve__LongTermDisability</fullName>
    <active>true</active>
    <label>Long Term Disability</label>
</RecordType>