force-app/main/default/objects/cve__PaymentSpecification__c/recordTypes/cve__ShortTermDisability.recordType-meta.xml
<RecordType>
    <fullName>cve__ShortTermDisability</fullName>
    <active>true</active>
    <label>Short Term Disability</label>
</RecordType>