force-app/main/default/objects/cve__PaymentSpecification__c/recordTypes/cve__Survivor.recordType-meta.xml
<RecordType>
    <fullName>cve__Survivor</fullName>
    <active>true</active>
    <label>Survivor</label>
</RecordType>