force-app/main/default/objects/cve__PaymentSpecification__c/recordTypes/cve__TermLife.recordType-meta.xml
<RecordType>
    <fullName>cve__TermLife</fullName>
    <active>true</active>
    <label>Term Life</label>
</RecordType>