force-app/main/default/objects/cve__PaymentSpecification__c/recordTypes/cve__TotalAndPermanentDisability.recordType-meta.xml
<RecordType>
    <fullName>cve__TotalAndPermanentDisability</fullName>
    <active>true</active>
    <label>Total and Permanent Disability</label>
</RecordType>