force-app/main/default/objects/cve__PaymentSpecification__c/recordTypes/cve__UniversalLife.recordType-meta.xml
<RecordType>
    <fullName>cve__UniversalLife</fullName>
    <active>true</active>
    <label>Universal Life</label>
</RecordType>