force-app/main/default/objects/cve__PaymentSpecification__c/recordTypes/cve__WaiverOfPremium.recordType-meta.xml
<RecordType>
    <fullName>cve__WaiverOfPremium</fullName>
    <active>true</active>
    <label>Waiver of Premium</label>
</RecordType>