force-app/main/default/objects/cve__PaymentSpecification__c/recordTypes/cve__Wellness.recordType-meta.xml
<RecordType>
    <fullName>cve__Wellness</fullName>
    <active>true</active>
    <label>Wellness</label>
</RecordType>