force-app/main/default/objects/cve__PaymentSpecification__c/recordTypes/cve__WholeLife.recordType-meta.xml
<RecordType>
    <fullName>cve__WholeLife</fullName>
    <active>true</active>
    <label>Whole Life</label>
</RecordType>