force-app/main/default/objects/cve__PaymentSpecification__c/listViews/cve__All.listView-meta.xml
<ListView>
    <fullName>cve__All</fullName>
    <columns>NAME</columns>
    <columns>RECORDTYPE</columns>
    <columns>cve__PaymentType__c</columns>
    <columns>cve__PaymentCalculationDate__c</columns>
    <columns>cve__Claim__c</columns>
    <columns>cve__BenefitClaimed__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>